Hid the game board on form load then show it after successful sign in.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,10 +14,11 @@ h1 {
 
 .container {
   align-content: center;
+  visibility: hidden;
 }
 
 .col-3 {
-  background-color: red;
+  background-color: white;
   font-size: 50px;
   height: 100px;
   text-align: center;
