--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,15 +1,32 @@
 @import '~bootstrap/scss/bootstrap';
+// loader
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
+  visibility: hidden;
+}
 
-#settings {
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+// Normal CSS
+.myButtons {
   text-align: center;
+
 }
 
 #sign-out {
-  text-align: center;
+  margin: 0 auto;
 }
 
 #start-game {
-  text-align: center;
+  margin: 0 auto;
 }
 
 h1 {
@@ -24,6 +41,10 @@ h3 {
   text-align: center;
 }
 
+#change-password {
+  text-align: center;
+}
+
 #sign-up {
   text-align: center;
 }
@@ -32,10 +53,10 @@ h3 {
   text-align: center;
 }
 
-.container {
-  align-content: center;
-  // visibility: hidden;
-}
+// .container {
+//   display: flex;
+//   justify-content: center;
+// }
 
 .col-3 {
   background-color: white;
