--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,7 +8,7 @@
   height: 120px;
   animation: spin 2s linear infinite;
   margin: 0 auto;
-  visibility: hidden;
+  display: none;
 }
 
 @keyframes spin {
@@ -18,7 +18,7 @@
 // Normal CSS
 .myButtons {
   text-align: center;
-
+  margin-bottom: 15px;
 }
 
 #sign-out {
@@ -26,6 +26,10 @@
 }
 
 #start-game {
+  margin: 0 auto;
+}
+
+#history {
   margin: 0 auto;
 }
 
